# CodingAssignment

./: CMakeLists.txt  README.md  main.cpp
driver/: Driver.cpp  Driver.h
files/: Output.txt  PrivateInvestigator.txt
input/: FileInput.cpp  FileInput.h  Input.h
output/: FileOutput.cpp  FileOutput.h  Output.h
service/: ProcessingService.cpp  ProcessingService.h
util/: GroupingAlgorithm.h  HashmapGroupingAlgorithm.cpp  HashmapGroupingAlgorithm.h  SentenceIndex.h
